<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#000317"
    android:fillViewport="true">

  <androidx.constraintlayout.widget.ConstraintLayout
      tools:context=".ui.fragments.movies.detail.DetailFragment"
      android:layout_width="match_parent"
      android:layout_height="wrap_content">

    <TextView
        android:id="@+id/detail_movie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/detail_30dp"
        android:fontFamily="@font/comfortaa_bold"
        android:text="@string/detail_movie"
        android:textColor="@color/white"
        android:textSize="@dimen/detail_16_txt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageView
        android:id="@+id/detail_img"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:scaleType="centerCrop"
        android:layout_marginTop="@dimen/detail_10dp"
        android:layout_marginHorizontal="@dimen/detail_70"
        app:layout_constraintTop_toBottomOf="@id/detail_movie"
        android:layout_width="@dimen/detail_0"
        android:layout_height="300dp"/>

    <TextView
        android:id="@+id/detail_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/detail_10dp"
        android:layout_marginStart="@dimen/detail_40"
        android:textColor="@color/white"
        android:textSize="@dimen/detail_16_txt"
        app:layout_constraintTop_toBottomOf="@id/detail_img" />

    <TextView
        android:id="@+id/rating"
        app:layout_constraintTop_toTopOf="parent"
        android:drawablePadding="@dimen/detail_6"
        android:text="@string/detail_raiting"
        android:drawableEnd="@drawable/star"
        android:textColor="@color/white"
        android:fontFamily="@font/comfortaa_bold"
        android:textSize="@dimen/detail_txt_size_12"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginRight="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/detail_status_txt"
        style="@style/textСharacteristic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/detail_12"
        android:text="@string/status"
        app:layout_constraintStart_toStartOf="@id/detail_name"
        app:layout_constraintTop_toBottomOf="@id/detail_name" />

    <TextView
        android:id="@+id/detail_status"
        android:paddingStart="@dimen/detail_padding_start_txt"
        app:layout_constraintStart_toEndOf="@id/detail_status_txt"
        style="@style/textСharacteristic"
        app:layout_constraintTop_toTopOf="@id/detail_status_txt"
        app:layout_constraintBottom_toBottomOf="@id/detail_status_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/detail_gengers_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/detail_gengers"
        style="@style/textСharacteristic"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@id/detail_status_txt"
        app:layout_constraintTop_toBottomOf="@id/detail_status_txt" />

    <TextView
        android:id="@+id/detail_txt_type"
        app:layout_constraintTop_toBottomOf="@id/detail_gengers_txt"
        app:layout_constraintStart_toStartOf="@id/detail_gengers_txt"
        android:text="@string/detail_type"
        style="@style/textСharacteristic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        app:layout_constraintTop_toTopOf="@id/detail_txt_type"
        app:layout_constraintStart_toEndOf="@id/detail_txt_type"
        android:id="@+id/detail_type"
        app:layout_constraintBottom_toBottomOf="@id/detail_txt_type"
        android:paddingStart="2dp"
        android:layout_width="wrap_content"
        style="@style/textСharacteristic"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/detail_txt_language"
        app:layout_constraintTop_toBottomOf="@id/detail_txt_type"
        app:layout_constraintStart_toStartOf="@id/detail_txt_type"
        android:text="@string/detail_language"
        android:layout_width="wrap_content"
        style="@style/textСharacteristic"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/detail_language"
        app:layout_constraintStart_toEndOf="@id/detail_txt_language"
        app:layout_constraintTop_toTopOf="@id/detail_txt_language"
        app:layout_constraintBottom_toBottomOf="@id/detail_txt_language"
        android:paddingStart="2dp"
        android:layout_width="wrap_content"
        style="@style/textСharacteristic"
        android:layout_height="wrap_content"/>

    <TextView
        style="@style/textСharacteristic"
        android:text="@string/detail_ended"
        android:id="@+id/detail_txt_ended"
        app:layout_constraintTop_toBottomOf="@id/detail_txt_language"
        android:layout_width="wrap_content"
        app:layout_constraintStart_toStartOf="@id/detail_txt_language"
        android:layout_height="wrap_content"/>

    <TextView
        style="@style/textСharacteristic"
        android:id="@+id/detail_ended"
        app:layout_constraintTop_toTopOf="@id/detail_txt_ended"
        app:layout_constraintBottom_toBottomOf="@id/detail_txt_ended"
        app:layout_constraintStart_toEndOf="@id/detail_txt_ended"
        android:paddingStart="2dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/detail_gengers"
        app:layout_constraintTop_toBottomOf="@id/detail_status_txt"
        style="@style/textСharacteristic"
        app:layout_constraintStart_toEndOf="@id/detail_gengers_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_width="wrap_content"
        android:gravity="center"
        android:id="@+id/desc"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/detail_txt_ended"
        android:padding="20dp"
        android:layout_height="0dp"
        android:fontFamily="@font/comfortaa_light"
        android:textColor="@color/white"
        android:textSize="10sp"
        />

  </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>